<resources>
    <string name="app_name">Mirror</string>
    <string name="mainMirror">Mirror</string>
    <string name="mainLogin">登录</string>
    <string name="createAccountPhoneTv">手机号</string>
    <string name="createAccountCodeTv">验证码</string>
    <string name="createAccountCodeBtn">发送验证码</string>
    <string name="createAccountPasswordTv">设置密码</string>
    <string name="createAccountCreatreAccountTv">创建账号</string>
    <string name="createAccountNumberTv">创建账号</string>
    <string name="login_loginText">账号登录</string>
    <string name="login_phoneNum">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_loginBtn">登录</string>
    <string name="login_create_account">创建账号</string>
    <string name="login_socialLogin_text">使用社交账号</string>
    <string name="login_createAccount_text">创建账号</string>
    <string name="login_captcha_text">验证码</string>
    <string name="login_setPassword_text">设置密码</string>
    <string name="login_sendCaptcha_text">发送验证码</string>
    <string name="goods_share_SlideViewDetails">滑动浏览详情</string>
    <string name="main_text">浏览平光眼镜</string>
    <string name="main_see_text">浏览所有分类</string>
    <string name="main_sun_text">浏览太阳眼镜</string>
    <string name="main_share_text">专题分享</string>
    <string name="main_shop_text">我的购物车</string>
    <string name="main_return_text">返回首页</string>
    <string name="main_exit_text">退出</string>
    <string name="shopping_cart_myShop_textView">我的购物车</string>
    <string name="shopping_cart_new_texts">显示排序为最新推荐</string>
    <string name="shopping_cart_no_text">您的购物车没有商品</string>
    <string name="pop_textview_text">登録</string>
    <string name="mainactivitylogin">登録</string>
    <string name="returnbackhome">返回首页</string>
    <string name="quit">退出</string>
    <string name="all_type_line_text">専题分享</string>
    <string name="all_type_linearlayout_text">顯示排序為 最新推荐</string>
    <string name="all_type_price_text">320</string>
    <string name="loginTitle">账号登录</string>
    <string name="loginTel">手机号</string>
    <string name="loginPassword">密码</string>
    <string name="loginForgetPassword">忘记密码?</string>
    <string name="loginLogin">登录</string>
    <string name="loginCreateAccount">创建账号</string>
    <string name="LoginUseAccount">使用社交账号</string>
    <string name="homepageContentTitle">GENTLE MONSTER</string>
    <string name="homepageContentSmallTitle">BIG BULLY 飞行员太阳镜</string>
    <string name="homepageContentContent">这是测试文字测试文字测试文字 这是测试文字测试文字测试文字 这是测试文字测试文字测试文字 这是测试文字测试文字测试文字这是测试文字测试文字测试文字 这是测试文字测试文字测试文字</string>
    <string name="homepageContentMoneyNumber">0.01</string>
    <string name="homepageContentDropTitle">滑动浏览详情</string>
    <string name="contentItemTitle">来自时尚之都韩国</string>
    <string name="contentItemSmallTitle">The frame comes from Kero</string>
    <string name="contentItemCity">首尔</string>
    <string name="contentItemContent">大家快来撒等等哈说离开的哈萨克接电话卡就收到货就卡死大神</string>
    <string name="addAddressAddAddress">添加地址</string>
    <string name="addAddressAddName">添加收件人姓名</string>
    <string name="addAddressAddTel">添加联络电话号码</string>
    <string name="addAddressAddReceiveAddress">添加收货地址</string>
    <string name="addAddressOfferAddress">提交地址</string>
    <string name="WholeAddressMyAddress">我的所有地址</string>
    <string name="wholeAddressAddAddress">添加地址</string>
    <string name="wholeAddressReceiver">收件人:</string>
    <string name="wholeAddressAddress">地址:</string>
    <string name="wholeAddressTel">电话:</string>
    <string name="forgetPasswordTitle">忘记密码</string>
    <string name="forgetPasswordUpdatePassword">修改密码</string>
    <string name="orderContentTitle">订单详情</string>
    <string name="orderContentWriteReceiverInfo">请填写收件人信息</string>
    <string name="orderContentWriteAddress">填加地址</string>
    <string name="orderContentThingsName">GENTLE MONSTER</string>
    <string name="orderContentContent">您所购买的商品为官网正品现货，我们将于三个工作日内为您发货，您所购买的商品均使用顺风速运为您配送</string>
    <string name="orderContentPrice">¥3850</string>
    <string name="orderContentSureOrder">确认下单</string>
    <string name="finishInfoOrderContentFreight">运费:</string>
    <string name="finishInfoOrderContentFreeFreight">免运费</string>
    <string name="finishInfoOrderContentSum">小计:</string>
    <string name="thematicSharingTitle">152怎样穿出一米七大长腿</string>
    <string name="downListViewTextView">简约而不简单</string>
    <string name="downListViewDownTextView">这是看见大手大脚啊上课的教室里的空间发生了的咖啡机萨里的咖啡机啊实力的咖啡机啊实力的咖啡机撒到路口附近阿萨德了看法</string>
    <string name="downListViewHeadText">FINLAYCO</string>
    <string name="downListViewHeadTextView">谁颜色镜头板材太阳镜</string>
    <string name="downListViewHeadTextViewView">我是你的你是我的手机大奖阿克琉斯多asdasdasdasdasdasdasdasdasd久啊看似简单撒打算打算.打算打算打打双打sadasdasdasdasdasdasdasdasdasd</string>
    <string name="BottomListViewHeadTextView">滑动浏览详情</string>
    <string name="wear_atlas">佩戴图集</string>

    <!-- mob-->
    <string name="share">分享</string>
    <string name="myShoppingCar">我的購物車</string>
    <string name="choosePayType">选择支付方式</string>
    <string name="payDialogweChatText">微信支付</string>
    <string name="alipay">支付宝支付</string>
</resources>
