<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBac"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginTitleLeft"
            android:layout_marginTop="@dimen/loginTitleTop"
            android:text="@string/orderContentTitle"
            android:textColor="@color/loginText"
            android:textSize="@dimen/loginTitleSize" />

        <ImageView
            android:id="@+id/login_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/loginCloseRight"
            android:layout_marginTop="@dimen/loginCloseTop"
            android:src="@mipmap/close" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginLineTop"
        android:src="@mipmap/create_account_title_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/orderContentBacHeight"
        android:layout_marginLeft="@dimen/loginTitleLeft"
        android:layout_marginRight="@dimen/loginCloseRight"
        android:layout_marginTop="@dimen/homepageContentTitleLineTop"
        android:background="@color/loginLoginColors">

        <TextView
            android:id="@+id/receiver_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/orderContentReceiverInfoLeft"
            android:layout_marginTop="@dimen/orderContentReceiverInfoTop"
            android:text="@string/orderContentWriteReceiverInfo"
            android:textColor="@color/loginText"
            android:textSize="@dimen/loginLoginSize" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/orderContentViewHeight"
            android:background="@color/orderContentView"
            android:layout_below="@id/receiver_info"
            android:layout_marginTop="@dimen/orderContentViewTop" />

        <TextView
            android:id="@+id/write_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderContentWriteAddress"
            android:layout_below="@id/view"
            android:layout_marginTop="@dimen/loginCloseTop"
            android:textColor="@color/loginText"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/orderContentSecondBacHeight"
            android:layout_marginLeft="@dimen/loginTitleLeft"
            android:layout_marginRight="@dimen/loginCloseRight"
            android:layout_marginTop="@dimen/homepageContentFrameTop"
            android:background="@color/loginLoginColors" />

        <ImageView
            android:id="@+id/things_iv"
            android:layout_width="@dimen/homepageContentImageWidth"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/things_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderContentThingsName"
            android:layout_toRightOf="@id/things_iv"
            android:layout_marginTop="@dimen/orderContentThingsNameTop"
            android:textStyle="bold"
            android:textColor="@color/loginText"
            android:layout_marginLeft="@dimen/orderContentThingsNameLeft"/>

        <TextView
            android:id="@+id/things_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderContentContent"
            android:layout_below="@id/things_name"
            android:layout_toRightOf="@id/things_iv"
            android:textColor="@color/loginText"
            android:layout_marginTop="@dimen/loginLineTop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderContentPrice"
            android:layout_below="@id/things_content"
            android:layout_toRightOf="@id/things_iv"
            android:layout_marginTop="@dimen/loginLineTop"
            android:textColor="@color/orderContentPrice"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/createReLe"
        android:layout_marginRight="@dimen/createReRig"
        android:layout_marginTop="@dimen/createReTo">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/create_number_press" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/orderContentSureOrder"
            android:textColor="@color/createWhite"
            android:textSize="@dimen/accountLoginTv" />

    </RelativeLayout>

</LinearLayout>

