<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBac"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginTitleLeft"
            android:layout_marginTop="@dimen/loginTitleTop"
            android:text="@string/WholeAddressMyAddress"
            android:textColor="@color/loginText"
            android:textSize="@dimen/loginTitleSize" />

        <ImageView
            android:id="@+id/login_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/loginCloseRight"
            android:layout_marginTop="@dimen/loginCloseTop"
            android:src="@mipmap/close" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginLineTop"
        android:src="@mipmap/create_account_title_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/wholeAddressAddAddressBac"
        android:layout_marginLeft="@dimen/loginTitleLeft"
        android:layout_marginRight="@dimen/loginCloseRight"
        android:layout_marginTop="@dimen/homepageContentTitleLineTop"
        android:background="@color/loginLoginColors">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wholeAddressAddAddress"
            android:textColor="@color/loginText"
            android:textSize="@dimen/loginLoginSize" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginTitleLeft"
            android:layout_marginRight="@dimen/loginCloseRight"
            android:layout_marginTop="@dimen/addAddressEditTextTop"
            android:background="@mipmap/add_receive_address_bac" />

        <TextView
            android:id="@+id/all_address_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/wholeAddressReceiverLeft"
            android:layout_marginTop="@dimen/wholeAddressReceiverTop"
            android:text="@string/wholeAddressReceiver"
            android:textColor="@color/loginText"
            android:textSize="@dimen/wholeAddressReceiverSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/all_address_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/all_address_receiver"
            android:layout_marginLeft="@dimen/wholeAddressReceiverLeft"
            android:layout_marginTop="@dimen/homepageContentDropImageTop"
            android:text="@string/wholeAddressAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/all_address_address"
            android:layout_marginLeft="@dimen/wholeAddressReceiverLeft"
            android:layout_marginTop="@dimen/homepageContentDropImageTop"
            android:text="@string/wholeAddressTel" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/all_address_receiver"
            android:layout_marginLeft="@dimen/wholeAddressEditLeft"
            android:layout_marginRight="@dimen/wholeAddressEditRight"
            android:layout_marginTop="@dimen/wholeAddressEditTop"
            android:layout_toRightOf="@id/all_address_address"
            android:src="@mipmap/edit" />

    </RelativeLayout>

</LinearLayout>

