<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucentBac"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/homepageContentShareRight"
        android:layout_marginTop="@dimen/homepageContentShareTop"
        android:src="@mipmap/share" />

    <LinearLayout
        android:layout_width="@dimen/homepageContentframeWidth"
        android:layout_height="@dimen/homepageContentFrameHeight"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/homepageContentFrameTop"
        android:background="@mipmap/commodity_share_out_frame"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/homepageContentTitleHeight"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/homepageContentTitleTop"
            android:text="@string/homepageContentTitle"
            android:textColor="@color/loginLoginColors"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/homepageContentTitleLineWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/homepageContentTitleLineTop"
            android:background="@mipmap/under_title_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/homepageContentSmallTitleMaring"
            android:text="@string/homepageContentSmallTitle"
            android:textColor="@android:color/white"
            android:textSize="@dimen/homepageContentSmallTitleSize" />

        <ImageView
            android:layout_width="@dimen/homepageContentTitleLineWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/under_title_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/homepageContentContentLeft"
            android:layout_marginRight="@dimen/homepageContentContentRight"
            android:layout_marginTop="@dimen/homepageContentContentTop"
            android:gravity="center"
            android:text="@string/homepageContentContent"
            android:textColor="@color/loginLoginColors"
            android:textSize="@dimen/homepageContentContentSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/homepageContentMoneyHeight"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/homepageContentMoneyTop"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/homepageContentMoneyNumberHeight"
                android:layout_marginTop="@dimen/homepageContentMoneyNumberTop"
                android:background="@mipmap/money" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/homepageContentMoneyNumberLeft"
                android:text="@string/homepageContentMoneyNumber"
                android:textColor="@android:color/white"
                android:textSize="@dimen/homepageContentMoneyNumberSize" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/homepageContentDropTitleTop"
        android:text="@string/homepageContentDropTitle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/homepageContentDropTitleSize" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/homepageContentDropImageTop"
        android:background="@mipmap/drop_down_arrow" />

</LinearLayout>